<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:gravity="top"
		android:background="#444"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip">

		<ImageView
			android:src="@drawable/smsovh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/image_logo" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:autoLink="web"
			android:textSize="18sp"
			android:textStyle="bold"
			android:paddingTop="8dip"
			android:paddingLeft="30dip"
			android:textColor="#fff" />
	</LinearLayout>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="5dip">

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_promo"
				android:textStyle="bold"
				android:padding="5dip" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_description"
				android:autoLink="web"
				android:padding="5dip" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_ovh_description"
				android:autoLink="web"
				android:padding="5dip" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_credit"
				android:autoLink="web"
				android:padding="5dip" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/changelog"
				android:autoLink="web"
				android:textSize="12sp"
				android:padding="5dip" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
